[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/timerDigits.theme" type="Theme" id=1]
[ext_resource path="res://themes/Timer.theme" type="Theme" id=2]
[ext_resource path="res://sprites/countdown_clock.png" type="Texture" id=3]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=4]

[node name="Timer" type="Node2D"]
script = ExtResource( 4 )

[node name="timerLabel" type="Label" parent="."]
margin_left = -284.0
margin_top = -19.0
margin_right = 284.0
margin_bottom = 19.0
theme = ExtResource( 2 )
text = "Time until critical failure:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerSprite" type="Sprite" parent="timerLabel"]
position = Vector2( 278, 92 )
texture = ExtResource( 3 )

[node name="timerCountdown" type="Label" parent="timerLabel/timerSprite"]
margin_left = -125.5
margin_top = -21.0
margin_right = 130.5
margin_bottom = 21.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "00:00.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdownTimer" type="Timer" parent="."]

[connection signal="timeout" from="countdownTimer" to="." method="_on_countdownTimer_timeout"]
